new bottom bar display, fixed playlist display

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="Theme.Lofiapp" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/purple_700</item>
+        <item name="android:statusBarColor">#24CAAC</item>
+        <item name="android:navigationBarColor">#24CAAC</item>
     </style>
 </resources>
